[project]
name = "lab"
version = "0.1.0"
description = "Experimental prototypes written in Python."
readme = "README.md"
authors = [{ name = "sabertazimi", email = "sabertazimi@gmail.com" }]
requires-python = ">=3.14.5"
dependencies = ["agent-cli", "nano-gpt"]

[dependency-groups]
dev = [
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.13",
]

[tool.uv.workspace]
members = ["packages/agent-cli", "packages/nano-gpt"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.uv.sources]
agent-cli = { workspace = true }
nano-gpt = { workspace = true }

[tool.pyright]
typeCheckingMode = "strict"
include = ["packages"]
extraPaths = ["packages/agent-cli/src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
]
ignore = ["E501"] # 忽略行长度限制

[tool.pytest.ini_options]
addopts = "--cov=packages --cov-report=term-missing"
testpaths = ["packages"]
pythonpath = ["."]
