[package]
name = "rustlings"
version = "4.6.0"
authors = ["anastasie <ana@ana.st>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1.19"
indicatif = "0.18.4"
console = "0.16.3"
notify = "8.2.0"
toml = "1.1.2"
regex = "1.12.3"
serde = {version = "1.0.228", features = ["derive"]}

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
glob = "0.3.3"
